<resources>
    <string name="app_name">VelezApp</string>
    <string name="velez">Velez</string>
    <string name="item_entradas_name">Entradas</string>
    <string name="item_perfil_name">Mi Perfil</string>
    <string name="item_home_name">Home</string>
    <string name="vs">X</string>
    <string name="carnet">Carnet</string>
    <string name="mis_entradas">Mis Entradas</string>
    <string name="mis_pagos">Mis Pagos</string>
    <string name="hacete_socio">Hacete Socio</string>
    <string name="titleEntradas">JUEGA VELEZ</string>
    <string name="vsTxt">X</string>
    <string name="sectorTxt">Sector:</string>
    <string name="carritoBtnTxt">Continuar con el pago</string>
    <string name="spinnerContentDesc">Sector</string>
    <string name="canchaVelezContentDesc">Cancha de Velez</string>
    <string name="ticketDetailTitle">Detalle de Entrada</string>
    <string name="news1Title">Derrota en la Bombonera</string>
    <string name="news1SecTxt">El orgullo de La Fabrica, fue convocado en la nomina de reserva de los jugadores para Qatar 2022</string>
    <string name="news1SuppTxt">Restan 9 días para que inicie la tan esperada Copa del Mundo</string>
    <string name="news1MediaDesc">Foto boca velez</string>
    <string name="news2Title">Con la Celeste en Qatar</string>
    <string name="news2SecTxt">Diego Godín fue convocado por el entrenador Alonso para ser parte de los futbolistas que representarán a Uruguay en Qatar.</string>
    <string name="news2SuppTxt">Será su cuarta cita mundialista</string>
    <string name="news2MediaDesc">Foto flamengo velez</string>
    <string name="homeTitle">FUTBOL PROFESIONAL</string>
    <string name="homeSubtitle">Noticias</string>
    <string name="btnComprarTxt">Comprar</string>
    <string name="btnLogin">Ingresar</string>
    <string name="signUpLogin">¿No tenés cuenta?</string>
    <string name="signUpBtn">Registrate</string>
    <string name="signUpTitle">Registrate</string>
    <string name="nombreSignUp">Nombre</string>
    <string name="apellidoSignUp">Apellido</string>
    <string name="dniSignUp">Dni</string>
    <string name="emailSignUp">Email</string>
    <string name="celularSignUp">Celular</string>
    <string name="passwordSignUp">Contraseña</string>
    <string name="passwordSignUpCheck">Repita contraseña</string>
    <string name="termsSignUp">Acepto los términos y condiciones</string>
    <string name="registrarseBtn">Registrarse</string>
    <string name="debAu">Deseo débito automático</string>
    <string name="comprar">Comprar</string>
    <string name="cancelar">Cancelar</string>
    <string name="Instagram">Instagram</string>
    <string name="comprar_entrada">Comprar Entrada</string>
    <string name="cerrar_sesion">Cerrar Sesion</string>
    <string name="info_novedades">Novedades</string>
    <string name="tienda_virtual">Tienda Virtual</string>
    <string name="confirmarTitle">Confirmar Compra</string>
    <string name="resumen">Resumen</string>
    <string name="nroTarjeta">Número de tarjeta</string>
    <string name="fecVencimiento">Fecha de vencimiento</string>
    <string name="cvv">CVV</string>
    <string name="nroTarjetaHINT">XXXX-XXXX-XXXX-XXXX</string>
    <string name="fecVencimientoHINT">MM-AAAA</string>
    <string name="cvvHINT">XXX</string>
    <string name="volver">Volver</string>
    <string name="compraOk"> <b> Compra exitosa.</b></string>
    <string name="compraOk2">En la seccion <b>mis entradas</b> podra observar el detalle de la misma</string>
    <string name="compraNotOk"> <b> ATENCION.</b> Usted ya posee entrada para este partido.</string>
    <string name="compraNotOkBtn">Volver a los partidos</string>
    <string name="socio">Socio:</string>
    <string name="valor">Valor:</string>
    <string name="texto_vs">%1$s VS %2$s</string>
    <string name="texto_fecha">%1$s/%2$s</string>
    <string name="texto_nombre">%1$s %2$s</string>
    <string name="logo_nombre">LOGO</string>
    <string name="club">Club Atléltico Vélez Sarsfield</string>
    <string name="nombre_socio">Mauro Zarate</string>
    <string name="numero_socio_text">Numero Socio:</string>
    <string name="numero_socio_data">0000001</string>
    <string name="validez_text">Validez</string>
    <string name="validez_data">20/11/2050</string>
    <string name="dni_data">30155215</string>
    <string name="dni_text">DNI</string>
    <string name="tipo_data">Pleno</string>
    <string name="tipo_text">Tipo:</string>
    <string name="qr">QR</string>
    <string name="un_gran_club">UN GRAN CLUB</string>
    <string name="fecha_nac">Fecha de nacimiento</string>
    <string name="codigo_text">Codigo de compra</string>
    <string name="email">Email</string>
    <string name="apertura_de_puertas">APERTURA DE PUERTAS:</string>
    <string name="horario_puertas">19:00</string>
    <string name="nombre_visitante">Argentinos</string>
    <string name="seleccione_un_sector">Seleccione un sector</string>
    <string name="juegavelez">#JuegaVelez</string>
    <string name="ver_detalle">Ver Detalle</string>
    <string name="fecha_mis_entradas">01/02/2022</string>
    <string name="campeonato_local">Campeonato Local</string>
    <string name="detalle_entrada_text">IMPORTANTE:Todos los socios deberán asistir con su Carnet por la puerta indicada, sin excepción. Para Popular Este y Platea Sur Alta no hace falta canjear, se entra directamente con carnet.</string>
    <string name="noticia_thiago_titulo">Thiago Orgullo</string>
    <string name="godin_foto">godin_foto</string>
    <string name="imagen_login">imagen_login</string>
    <string name="terminos_condiciones">Al ingresar acepto los términos y condiciones de navegación.</string>
    <string name="sitio_oficial_text">Sitio Oficial</string>
    <string name="direccion_text">Av. Juan B. Justo 9200 - CP 1408 - CABA - Argentina</string>
    <string name="telefono_text">46499100</string>
    <string name="mail_text">info@velezsarsfield.com.ar</string>
    <string name="wpp_text">1122661000</string>
    <string name="barra_separadora">/</string>
    <string name="pendiente_a_la_fecha">Pendiente a la fecha:</string>
    <string name="pagar">ir a pagar</string>
    <string name="pendiente_data">$10000</string>
    <string name="monto">monto</string>
    <string name="fecha">fecha</string>
    <string name="signo_pesos">$</string>
    <string name="hacete_socio_bottom_text">Tu solicitud será enviada a la comisión directiva del club, y queda sujeta a aprobación.</string>
    <string name="hacete_socio_bottom_text2">Velez te agradece</string>

</resources>