<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/home"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="10dp"
    android:layout_marginTop="15dp"
    android:layout_marginEnd="10dp"
    android:layout_marginBottom="15dp"
    tools:context=".fragments.HomeFragment">

    <LinearLayout
        android:id="@+id/principal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/homeTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/homeTitle"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/velez"
            android:textSize="20sp"
            android:textStyle="bold|italic" />

        <LinearLayout
            android:id="@+id/alineacion_noticia_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:elevation="10dp"
            android:orientation="vertical">

            <!-- Media -->

            <ImageView
                android:id="@+id/thiago_foto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:contentDescription="@string/noticia_thiago_titulo"
                android:src="@drawable/almada_noticia" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <!-- Title, secondary and supporting text -->
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif"
                    android:text="@string/noticia_thiago_titulo"
                    android:textAlignment="center"
                    android:textAllCaps="true"
                    android:textAppearance="?attr/textAppearanceHeadline6"
                    android:textColor="@color/velez"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/news1SecTxt"
                    android:textAppearance="?attr/textAppearanceBody2"
                    android:textColor="@color/black" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/news1SuppTxt"
                    android:textAppearance="?attr/textAppearanceBody2"
                    android:textColor="@color/black" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/alineacion_noticia2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:elevation="10dp"
            android:orientation="vertical">

            <!-- Media -->

            <ImageView
                android:id="@+id/godin_foto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:contentDescription="@string/godin_foto"
                android:src="@drawable/godin_noticia" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <!-- Title, secondary and supporting text -->
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif"
                    android:text="@string/news2Title"
                    android:textAlignment="center"
                    android:textAllCaps="true"
                    android:textAppearance="?attr/textAppearanceHeadline6"
                    android:textColor="@color/velez"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/news2SecTxt"
                    android:textAppearance="?attr/textAppearanceBody2"
                    android:textColor="@color/black" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/news2SuppTxt"
                    android:textAppearance="?attr/textAppearanceBody2"
                    android:textColor="@color/black" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>