<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_package_item"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    android:backgroundTintMode="multiply"
    app:cardBackgroundColor="@color/velez"
    app:cardCornerRadius="5dp"
    app:cardElevation="10dp">

    <LinearLayout
        android:id="@+id/alineacio"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="5dp"
        android:background="@color/white"
        android:orientation="vertical">

        <!-- Title, secondary and supporting text -->
        <TextView
            android:id="@+id/equipoRival"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/nombre_visitante"
            android:textAllCaps="true"
            android:textAppearance="?attr/textAppearanceHeadline6"
            android:textColor="@color/velez"
            android:textSize="25sp"
            android:textStyle="bold|italic" />

        <TextView
            android:id="@+id/fecha"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/fecha_mis_entradas"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/torneo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/campeonato_local"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/btn_detalle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:backgroundTint="@color/velez"
            android:text="@string/ver_detalle"
            android:textColor="@color/velez"
            android:textSize="15sp" />

    </LinearLayout>

</androidx.cardview.widget.CardView>